# reglang

./: .gitignore  .travis.yml  Makefile  Makefile.coq.local  README.md  _CoqProject  coq-reglang.opam  default.nix  dune-project  meta.yml  opam
.github/workflows/: coq-action.yml  docker-action.yml  docker-ci.yml  nix-action-8.13.yml  nix-action-8.14.yml  nix-action-8.15.yml  nix-action-8.16.yml  nix-action-8.17.yml  nix-action-master.yml  nix-action.yml
.nix/: config.nix
docs/v1.1.1/coqdoc/: RegLang.dfa.html  RegLang.languages.html  RegLang.minimization.html  RegLang.misc.html  RegLang.myhill_nerode.html  RegLang.nfa.html  RegLang.regexp.html  RegLang.setoid_leq.html  RegLang.shepherdson.html  RegLang.two_way.html  RegLang.vardi.html  RegLang.wmso.html  indexpage.html  toc.html
docs/v1.1/coqdoc/: RegLang.dfa.html  RegLang.languages.html  RegLang.minimization.html  RegLang.misc.html  RegLang.myhill_nerode.html  RegLang.nfa.html  RegLang.regexp.html  RegLang.setoid_leq.html  RegLang.shepherdson.html  RegLang.two_way.html  RegLang.vardi.html  RegLang.wmso.html  config.js  indexpage.html
extra/: coqdoc.css  footer.html  header.html  index.html  index.md
theories/: Makefile  _CoqProject  dfa.v  dune  languages.v  minimization.v  misc.v  myhill_nerode.v  nfa.v  regexp.v  setoid_leq.v  shepherdson.v  two_way.v  vardi.v  wmso.v  zify.v
