opam-version: "2.0"
version: "dev"
maintainer: "Christian Doczkal <christian.doczkal@ens-lyon.fr>"

homepage: "https://github.com/chdoc/coq-reglang"
dev-repo: "git+https://github.com/chdoc/coq-reglang.git"
bug-reports: "https://github.com/chdoc/coq-reglang/issues"
license: "CECILL-B"

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {>= "8.7" & < "8.11~"}
  "coq-mathcomp-ssreflect" {>= "1.9" & < "1.10~"}
]

synopsis: "Regular language representations in the constructive type theory of Coq"
description: """
We verify translations between different representations of regular
languages: various forms of automata (deterministic, nondeterministic,
one-way, two-way), regular expressions, and the logic WS1S. We also
show various decidability results and closure properties.
"""

tags: [
  "keyword:regular languages"
  "keyword:regular expressions"
  "keyword:finite automata"
  "keyword:two-way automata"
  "keyword:monadic second-order logic"
  "category:Computer Science/Formal Languages Theory and Automata"
  "logpath:RegLang"
]

authors: [
  "Christian Doczkal <christian.doczkal@ens-lyon.fr>"
  "Gert Smolka"
]
